feat: open kit menu with command argument